fix: address copilot suggestions